# faststress

./: .gitignore  CLAUDE.md  pyproject.toml
src/faststress/: __init__.py  __main__.py  app.py  models.py  optimizer.py  runner.py  storage.py
src/faststress/styles/: app.tcss
src/faststress/widgets/: __init__.py  case_editor.py  case_list.py  optimizer_ui.py  run_panel.py  server_panel.py
tests/: conftest.py  test_app.py  test_models.py
