[project]
name = "faststress"
version = "0.1.0"
description = "Interactive TUI wrapper for sglang.bench_serving with batch test case management and auto-optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "pydantic>=2.13.4",
    "textual>=8.2.7",
]

[project.scripts]
faststress = "faststress.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faststress"]
